--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -81,8 +81,7 @@ $black: #2b2523
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 0rem
-  background-color: transparent
+  padding: 0.5rem 0.5rem 0.5rem
 
 //Menu overrides
 $menu-item-color: $white-ter
@@ -101,7 +100,7 @@ $menu-label-color: $white-ter
   list-style: none !important
   text-align: left
 .social
-  padding: 2em
+  padding: 16px
 .social a
     padding: .5em .5em .3em .5em
     border-radius: 1em
@@ -138,3 +137,9 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+	
+.page-content
+  min-height: calc(100vh - 130px);
+  
+.footer-note
+  font-size: small;
