--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -106,6 +106,9 @@ $menu-label-color: $white-ter
     height: 1em
     vertical-align: middle
     display: inline
+.social a:hover 
+  -webkit-filter: invert(100%);
+  filter: invert(100%)
 
 // blog roll
 .blog-list-item.is-featured
