--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -142,3 +142,12 @@ $menu-label-color: $white-ter
   
 .footer-note
   font-size: small;
+
+.button-link 
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
